[gd_scene load_steps=5 format=3 uid="uid://dpgkkb4iqrw5b"]

[ext_resource type="PackedScene" uid="uid://dt8qvg4eqnc71" path="res://prefabs/TrainWheel.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/TrainVehicle.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bwresqdpylkai" path="res://assets/train_car.png" id="3_0sagh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdjcq"]
size = Vector2(88, 20)

[node name="TrainVehicle" type="Node2D"]
script = ExtResource("2")

[node name="RailFollower" parent="." groups=["train_front_wheels"] instance=ExtResource("1")]

[node name="RailFollower2" parent="." groups=["train_back_wheels"] instance=ExtResource("1")]

[node name="Body" type="Node2D" parent="."]
z_index = 10

[node name="Node2D" type="Node2D" parent="Body"]
z_index = 3
z_as_relative = false

[node name="ColorRect" type="ColorRect" parent="Body/Node2D"]
offset_left = -15.0
offset_top = -4.0
offset_right = -7.0
offset_bottom = 4.0
color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="ColorRect2" type="ColorRect" parent="Body/Node2D"]
offset_left = 68.0
offset_top = -4.0
offset_right = 77.0
offset_bottom = 4.0
color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="Node2D2" type="Node2D" parent="Body"]
z_index = 10
z_as_relative = false

[node name="TextureRect" type="TextureRect" parent="Body/Node2D2"]
offset_left = -10.0
offset_top = -12.0
offset_right = 70.0
offset_bottom = 12.0
texture = ExtResource("3_0sagh")

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(29, 0)
shape = SubResource("RectangleShape2D_cdjcq")
